--- a/InventorySystem/src/application/Main.fxml
+++ b/InventorySystem/src/application/Main.fxml
@@ -13,20 +13,20 @@
       <Text layoutX="68.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inventory Management System" />
       <Text layoutX="489.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Products" />
       <Text layoutX="66.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Parts" />
-      <TableView layoutX="477.0" layoutY="130.0" prefHeight="200.0" prefWidth="372.0">
+      <TableView fx:id="productsTableView" layoutX="477.0" layoutY="130.0" prefHeight="200.0" prefWidth="372.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="Part ID" />
-            <TableColumn prefWidth="75.0" text="Part Name" />
-            <TableColumn prefWidth="100.0" text="Inventory Level" />
-            <TableColumn prefWidth="120.0" text="Price/Cost per Unit" />
+            <TableColumn fx:id="productIDColumn" prefWidth="75.0" text="Product ID" />
+            <TableColumn fx:id="productNameColumn" prefWidth="75.0" text="Product Name" />
+            <TableColumn fx:id="productInventoryColumn" prefWidth="100.0" text="Inventory Level" />
+            <TableColumn fx:id="productCostColumn" prefWidth="120.0" text="Price/Cost per Unit" />
          </columns>
       </TableView>
-      <TableView layoutX="47.0" layoutY="130.0" prefHeight="200.0" prefWidth="372.0">
+      <TableView fx:id="partsTableView" layoutX="47.0" layoutY="130.0" prefHeight="200.0" prefWidth="372.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="Part ID" />
-            <TableColumn prefWidth="75.0" text="Part Name" />
-            <TableColumn prefWidth="100.0" text="Inventory Level" />
-            <TableColumn prefWidth="120.0" text="Price/Cost per Unit" />
+            <TableColumn fx:id="partIDColumn" prefWidth="75.0" text="Part ID" />
+            <TableColumn fx:id="partNameColumn" prefWidth="75.0" text="Part Name" />
+            <TableColumn fx:id="partInventoryColumn" prefWidth="100.0" text="Inventory Level" />
+            <TableColumn fx:id="partCostColumn" prefWidth="120.0" text="Price/Cost per Unit" />
          </columns>
       </TableView>
       <TextField fx:id="searchProductInput" layoutX="699.0" layoutY="90.0" />
