--- a/InventorySystem/src/application/modifyPart.fxml
+++ b/InventorySystem/src/application/modifyPart.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AddPartController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ModifyPartController">
    <children>
       <TextField fx:id="idInput" disable="true" layoutX="195.0" layoutY="110.0" />
       <TextField fx:id="nameInput" layoutX="195.0" layoutY="150.0" />
@@ -15,14 +15,14 @@
       <TextField fx:id="maxInput" layoutX="195.0" layoutY="272.0" />
       <TextField fx:id="minInput" layoutX="395.0" layoutY="272.0" />
       <TextField fx:id="machineIDInput" layoutX="195.0" layoutY="315.0" />
-      <RadioButton layoutX="167.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#inhouseClicked" selected="true" text="In-House">
+      <RadioButton fx:id="inhouseRadioButton" layoutX="167.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#inhouseClicked" selected="true" text="In-House">
          <toggleGroup>
             <ToggleGroup fx:id="ToggleGroup1" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="283.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#outsourceClicked" text="Outsourced" toggleGroup="$ToggleGroup1" />
-      <Text layoutX="56.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Part" />
-      <Button fx:id="saveButton" layoutX="369.0" layoutY="351.0" mnemonicParsing="false" onAction="#savePart" onMouseClicked="#savePart" text="Save" />
+      <RadioButton fx:id="outsourcedRadioButton" layoutX="283.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#outsourceClicked" text="Outsourced" toggleGroup="$ToggleGroup1" />
+      <Text layoutX="56.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify Part" />
+      <Button fx:id="saveButton" layoutX="369.0" layoutY="351.0" mnemonicParsing="false" onMouseClicked="#savePart" text="Save" />
       <Button fx:id="cancelButton" layoutX="469.0" layoutY="351.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
       <Label layoutX="100.0" layoutY="114.0" text="ID" />
       <Label layoutX="100.0" layoutY="154.0" text="Name" />
