--- a/InventorySystem/src/application/modifyPart.fxml
+++ b/InventorySystem/src/application/modifyPart.fxml
@@ -22,7 +22,7 @@
       </RadioButton>
       <RadioButton fx:id="outsourcedRadioButton" layoutX="283.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#outsourceClicked" text="Outsourced" toggleGroup="$ToggleGroup1" />
       <Text layoutX="56.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modify Part" />
-      <Button fx:id="saveButton" layoutX="369.0" layoutY="351.0" mnemonicParsing="false" onMouseClicked="#savePart" text="Save" />
+      <Button fx:id="saveButton" layoutX="369.0" layoutY="351.0" mnemonicParsing="false" onAction="#savePart" onMouseClicked="#savePart" text="Save" />
       <Button fx:id="cancelButton" layoutX="469.0" layoutY="351.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
       <Label layoutX="100.0" layoutY="114.0" text="ID" />
       <Label layoutX="100.0" layoutY="154.0" text="Name" />
