--- a/InventorySystem/src/application/Main.fxml
+++ b/InventorySystem/src/application/Main.fxml
@@ -38,5 +38,7 @@
       <Button fx:id="modifyPartButton" layoutX="281.0" layoutY="355.0" mnemonicParsing="false" onAction="#modifyPart" text="Modify" />
       <Button fx:id="addPartButton" layoutX="233.0" layoutY="355.0" mnemonicParsing="false" onAction="#addPart" text="Add" />
       <Button fx:id="searchPartButton" layoutX="191.0" layoutY="90.0" mnemonicParsing="false" onAction="#searchPart" text="Search" />
+      <Button fx:id="cancelSearchPartButton" disable="true" layoutX="133.0" layoutY="90.0" mnemonicParsing="false" onAction="#cancelPartSearch" text="Cancel" visible="false" />
+      <Button fx:id="cancelSearchProductButton" disable="true" layoutX="563.0" layoutY="90.0" mnemonicParsing="false" text="Cancel" />
    </children>
 </Pane>
