--- a/InventorySystem/src/application/Main.fxml
+++ b/InventorySystem/src/application/Main.fxml
@@ -40,5 +40,6 @@
       <Button fx:id="searchPartButton" layoutX="191.0" layoutY="90.0" mnemonicParsing="false" onAction="#searchPart" text="Search" />
       <Button fx:id="cancelSearchPartButton" disable="true" layoutX="133.0" layoutY="90.0" mnemonicParsing="false" onAction="#cancelPartSearch" text="Cancel" visible="false" />
       <Button fx:id="cancelSearchProductButton" disable="true" layoutX="563.0" layoutY="90.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="exitButton" layoutX="746.0" layoutY="410.0" mnemonicParsing="false" text="Exit" />
    </children>
 </Pane>
