--- a/InventorySystem/src/application/modifyProduct.fxml
+++ b/InventorySystem/src/application/modifyProduct.fxml
@@ -42,7 +42,10 @@
       <TextField fx:id="searchPartInput" layoutX="740.0" layoutY="14.0" />
       <Button fx:id="searchButton" layoutX="653.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchPart" text="Search" />
       <Button fx:id="deleteButton" layoutX="814.0" layoutY="497.0" mnemonicParsing="false" onAction="#deletePart" text="Delete" />
-      <Button fx:id="addButton" layoutX="814.0" layoutY="260.0" mnemonicParsing="false" onAction="#addPart" text="Add" />
+      <Button fx:id="addButton" layoutX="826.0" layoutY="260.0" mnemonicParsing="false" onAction="#addPart" text="Add" />
       <Button fx:id="cancelSearchPartButton" disable="true" layoutX="591.0" layoutY="14.0" mnemonicParsing="false" onAction="#cancelPartSearch" text="Cancel" visible="false" />
+      <Label fx:id="minimumPartValidationLabel" layoutX="563.0" layoutY="264.0" text="Product must have at least one associated part." textFill="#f80000" visible="false" />
+      <Label fx:id="nameValidationLabel" layoutX="365.0" layoutY="154.0" text="Please enter a name" textFill="RED" visible="false" />
+      <Label fx:id="priceValidationLabel" layoutX="367.0" layoutY="230.0" text="Please enter a price" textFill="RED" visible="false" />
    </children>
 </Pane>
