--- a/InventorySystem/src/application/modifyProduct.fxml
+++ b/InventorySystem/src/application/modifyProduct.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="993.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ModifyProductController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="575.0" prefWidth="993.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ModifyProductController">
    <children>
       <TextField fx:id="idInput" disable="true" layoutX="195.0" layoutY="110.0" />
       <TextField fx:id="nameInput" layoutX="195.0" layoutY="150.0" />
@@ -14,9 +14,12 @@
       <TextField fx:id="priceInput" layoutX="195.0" layoutY="226.0" />
       <TextField fx:id="maxInput" layoutX="195.0" layoutY="272.0" />
       <TextField fx:id="minInput" layoutX="395.0" layoutY="272.0" />
-      <Text layoutX="56.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Product" />
-      <Button fx:id="saveButton" layoutX="679.0" layoutY="517.0" mnemonicParsing="false" onAction="#saveProduct" text="Save" />
-      <Button fx:id="cancelButton" layoutX="740.0" layoutY="517.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
+      <Text layoutX="56.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Product">
+         <font>
+            <Font size="18.0" />
+         </font></Text>
+      <Button fx:id="saveButton" layoutX="679.0" layoutY="530.0" mnemonicParsing="false" onAction="#saveProduct" text="Save" />
+      <Button fx:id="cancelButton" layoutX="740.0" layoutY="530.0" mnemonicParsing="false" onAction="#cancelClicked" text="Cancel" />
       <Label layoutX="100.0" layoutY="114.0" text="ID" />
       <Label layoutX="100.0" layoutY="154.0" text="Name" />
       <Label layoutX="100.0" layoutY="192.0" text="Inv" />
@@ -41,7 +44,7 @@
       </TableView>
       <TextField fx:id="searchPartInput" layoutX="740.0" layoutY="14.0" />
       <Button fx:id="searchButton" layoutX="653.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchPart" text="Search" />
-      <Button fx:id="deleteButton" layoutX="814.0" layoutY="497.0" mnemonicParsing="false" onAction="#deletePart" text="Delete" />
+      <Button fx:id="deleteButton" layoutX="819.0" layoutY="505.0" mnemonicParsing="false" onAction="#deletePart" text="Delete" />
       <Button fx:id="addButton" layoutX="826.0" layoutY="260.0" mnemonicParsing="false" onAction="#addPart" text="Add" />
       <Button fx:id="cancelSearchPartButton" disable="true" layoutX="591.0" layoutY="14.0" mnemonicParsing="false" onAction="#cancelPartSearch" text="Cancel" visible="false" />
       <Label fx:id="minimumPartValidationLabel" layoutX="563.0" layoutY="264.0" text="Product must have at least one associated part." textFill="#f80000" visible="false" />
